Adding bower and grunt, with bootstrap dependency and basic vendor copy
When setting up the site, you'll need to run 'bower install' and
'grunt', to install front-end dependencies and copy them into the
statically served 'vendor' directory.

Now I should be set up to automatically update front-end deps and
serving them immediately! :)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Max McCord <maxmccord93@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "~4.13.4"
+    "express": "4.14.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
