--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Do not add installed dependencies to the repo, to avoid bloat.
 node_modules/**
+
+# Do not add installed bower dependencies to the repo
+bower_components/**
+
+# Do not add copied vendor files
+public/vendor/**
