--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
   ],
   "license": "BSD",
   "homepage": "https://github.com/maxmccord/maxmccordco",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
