Rearranging files into the src directory, and creating build dir
All site files will be hosted from the build dir. If I have a source
file that needs to be served up directly, I should set up Grunt to copy
the file into the ./build dir first. This improves organization and
gives me certainty over what files I'm actually serving up. Plus, it
makes it easier to add minification and other things to my source files
in the future

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@ node_modules/**
 # Do not add installed bower dependencies to the repo
 bower_components/**
 
-# Do not add copied vendor files
-public/vendor/**
-
-# Do not add temporary codegen files
-dist/**
+# Do not add the built site
+build/**
