--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Max McCord <maxmccord93@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "nodemailer": "^3.1.4"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
